--- a/index.html
+++ b/index.html
@@ -1,8 +1,156 @@
-<!DOCTYPE html><html><head><meta charset='utf-8'><title>KV Academy</title></head>
-<body><h1>KV Academy - Main Page</h1>
-<p>🔥 3D + Firebase Connected (Add your firebase-config.js)</p>
-<a href="login.html">Student Login</a> |
-<a href="admin.html">Admin Panel</a> |
-<a href="exam.html">Take Exam</a>
-<script type="module" src="firebase-config.js"></script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>KV Academy | Learn. Grow. Succeed.</title>
+<link rel="stylesheet" href="style.css">
+
+<style>
+/* Home Page Styling */
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, sans-serif;}
+body{background:#eef2f6;}
+
+header{
+  background:white;
+  padding:15px 30px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom:3px solid #ffcd00;
+}
+header img{width:130px;}
+header nav a{
+  margin:0 10px;
+  text-decoration:none;
+  font-weight:bold;
+  color:#002b57;
+}
+header nav a:hover{
+  color:#ffcd00;
+}
+
+.hero{
+  height:80vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  background:linear-gradient(#002b57aa,#002b57aa),url('https://images.pexels.com/photos/414519/pexels-photo-414519.jpeg') center/cover;
+  text-align:center;
+  color:white;
+  padding:20px;
+}
+.hero span{color:#ffcd00;}
+.hero button{
+  background:#ffcd00;
+  border:none;
+  padding:12px 22px;
+  font-size:18px;
+  border-radius:6px;
+  margin-top:15px;
+  cursor:pointer;
+  color:#002b57;
+  font-weight:bold;
+}
+.hero button:hover{
+  background:white;
+  color:#002b57;
+}
+
+section{
+  padding:50px;
+  text-align:center;
+}
+.course-box{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:20px;
+  margin-top:20px;
+}
+.course{
+  background:white;
+  padding:20px;
+  width:250px;
+  border-radius:10px;
+  box-shadow:0 0 10px rgba(0,0,0,0.2);
+}
+.course h3{color:#002b57;margin-bottom:8px;}
+
+footer{
+  background:#002b57;
+  color:white;
+  text-align:center;
+  padding:12px;
+  margin-top:50px;
+}
+</style>
+</head>
+<body>
+
+<!-- NAVBAR -->
+<header>
+  <img src="kv-logo.png" alt="KV Academy Logo">
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="materials_view.html">Materials</a>
+    <a href="login.html">Login</a>
+    <a href="dashboard_admin.html">Admin</a>
+  </nav>
+</header>
+
+
+<!-- HERO SECTION -->
+<div class="hero">
+  <h1>Welcome to <span>KV Academy</span></h1>
+  <p>Education • Training • Certificates • Job Support</p>
+  <button onclick="location.href='login.html'">Get Started</button>
+</div>
+
+
+<!-- COURSES -->
+<section>
+  <h2>Our Courses</h2>
+  <div class="course-box">
+
+    <div class="course">
+      <h3>Python Programming 🐍</h3>
+      <p>Learn Python from scratch to advanced.</p>
+    </div>
+
+    <div class="course">
+      <h3>Data Science 📊</h3>
+      <p>Data Analysis, Machine Learning & Projects.</p>
+    </div>
+
+    <div class="course">
+      <h3>Android Development 📱</h3>
+      <p>Build mobile apps & publish on Play Store.</p>
+    </div>
+
+    <div class="course">
+      <h3>Web Development 💻</h3>
+      <p>Frontend, Backend & Deployment.</p>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- CONTACT -->
+<section style="background:white;">
+  <h2>Contact Us</h2>
+  <p>📍 Nellore, Andhra Pradesh, India</p>
+  <p>📞 +91 73311 74956</p>
+  <p>📧 kvacademy@gmail.com</p>
+</section>
+
+
+<!-- FOOTER -->
+<footer>
+  © 2025 KV Academy | All Rights Reserved
+</footer>
+
+</body>
+</html>
